5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1675_1932.log
== SUBMITION (2019-05-01 10:11:24) 
-- CODE:
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3

if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1):
	print("1 e 3")
-- EXECUTION TIME:
0.192932
-- ERROR:
  File "/home/codebench/codes/1675/1932/main.py", line 16
    elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1):
                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:11:30) 
-- CODE:
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3

if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1):
	print("1 e 3")
-- ERROR:
File "XXXX", line 16
    elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1):
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:11:40) 
-- CODE:
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3

if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1)):
	print("1 e 3")
-- ERROR:
File "XXXX", line 16
    elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1):
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 10:11:43) 
-- CODE:
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3

if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1)):
	print("1 e 3")
-- EXECUTION TIME:
0.202446
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:

-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:

-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:11:53) 
-- CODE:
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3

if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1)):
	print("1 e 3")
-- ERROR:
File "XXXX", line 16
    elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1):
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:14:17) 
-- CODE:
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3
print(p1, p2, p3)
if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1)):
	print("1 e 3")
-- OUTPUT:
1.0634920634920635 1.75 1.0606060606060606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:18:14) 
-- CODE:
from math import *
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3
if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1)):
	print("1 e 3")
-- OUTPUT:
1.0634920634920635 1.75 1.0606060606060606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:19:02) 
-- CODE:
from math import *
o1 = float(input("Distancia entre os olhos 1: "))
n1 = float(input("Distancia entre o nariz e queixo 1: "))
o2 = float(input("Distancia entre os olhos 2: "))
n2 = float(input("Distancia entre o nariz e queixo 2: "))
o3 = float(input("Distancia entre os olhos 3: "))
n3 = float(input("Distancia entre o nariz e queixo 3: "))

p1 = o1 / n1
p2 = o2 / n2
p3 = o3 / n3
if(abs(p1 - p2) < abs(p2 - p3) < abs(p3 - p1)):
	print("1 e 2")
elif(abs(p3 - p2) < abs(p1 - p3) < abs(p2 - p1)):
	print("2 e 3")
elif(abs(p1 - p3) < abs(p2 - p3) < abs(p2 - p1)):
	print("1 e 3")
-- OUTPUT:
1.0634920634920635 1.75 1.0606060606060606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
